Added the ability to be a copying bastard

--- a/SimTECH/SimTECH/Pages/Leagues/LeagueEditor.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/LeagueEditor.razor
@@ -9,16 +9,24 @@
                     <MudTextField T="string" @bind-Value="model.Name" Label="Name" />
                 </MudItem>
                 <MudItem xs="6">
-                    <RangeInput Items="_skillRanges" RangeType="RangeType.Skill">Skill</RangeInput>
+                    <RangeInput Items="_skillRanges" RangeType="RangeType.Skill">
+                        <MudText Typo="Typo.h6">Skill</MudText>
+                    </RangeInput>
                 </MudItem>
                 <MudItem xs="6">
-                    <RangeInput Items="_ageRanges" RangeType="RangeType.Age">Age</RangeInput>
+                    <RangeInput Items="_ageRanges" RangeType="RangeType.Age">
+                        <MudText Typo="Typo.h6">">Age</MudText>
+                    </RangeInput>
                 </MudItem>
                 <MudItem xs="6">
-                    <RangeInput Items="_teamRanges" RangeType="RangeType.Team">Team</RangeInput>
+                    <RangeInput Items="_teamRanges" RangeType="RangeType.Team">
+                        <MudText Typo="Typo.h6">Team</MudText>
+                    </RangeInput>
                 </MudItem>
                 <MudItem xs="6">
-                    <RangeInput Items="_engineRanges" RangeType="RangeType.Engine">Engine</RangeInput>
+                    <RangeInput Items="_engineRanges" RangeType="RangeType.Engine">
+                        <MudText Typo="Typo.h6">">Engine</MudText>
+                    </RangeInput>
                 </MudItem>
             </MudGrid>
         </MudForm>
