--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -36,8 +36,8 @@
             <MudTabPanel Text="Calendar">
                 <Calendar />
             </MudTabPanel>
-            <MudTabPanel Text="Standings">
-                <MudText>Not implemented yet</MudText>
+            <MudTabPanel Text="Standings" BadgeData='"Alhamdullah"' BadgeColor="Color.Warning">
+                <Standings />
             </MudTabPanel>
             <MudTabPanel Text="Drivers">
                 <SeasonDrivers />
