--- a/SimTECH/SimTECH/Pages/Season/EntrantPicker.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantPicker.razor
@@ -7,7 +7,7 @@
     <MudGrid>
         <MudItem xs="6">
             <MudPaper>
-                <MudText Typo="Typo.h5">Entered engines</MudText>
+                <MudText Typo="Typo.h5">Entered</MudText>
                 <MudTable T="Engine" Items="@Model.BaseEngines" OnRowClick="RemoveEngine" Hover="true" Dense="true">
                     <RowTemplate>
                         <MudTd DataLabel="Name">@context.Name</MudTd>
@@ -17,7 +17,7 @@
         </MudItem>
         <MudItem xs="6">
             <MudPaper>
-                <MudText Typo="Typo.h5">Available engines</MudText>
+                <MudText Typo="Typo.h5">Available</MudText>
                 <MudTable T="Engine" Items="@Engines" OnRowClick="EnterEngine" Hover="true" Dense="true">
                     <RowTemplate>
                         <MudTd DataLabel="Name">@context.Name</MudTd>
@@ -32,7 +32,7 @@
     <MudGrid>
         <MudItem xs="6">
             <MudPaper>
-                <MudText Typo="Typo.h5">Entered teams</MudText>
+                <MudText Typo="Typo.h5">Entered</MudText>
                 <MudTable T="Team" Items="@Model.BaseTeams" OnRowClick="RemoveTeam" Hover="true" Dense="true">
                     <RowTemplate>
                         <MudTd DataLabel="Name">
@@ -45,7 +45,7 @@
         </MudItem>
         <MudItem xs="6">
             <MudPaper>
-                <MudText Typo="Typo.h5">Available teams</MudText>
+                <MudText Typo="Typo.h5">Available</MudText>
                 <MudTable T="Team" Items="@Teams" OnRowClick="EnterTeam" Hover="true" Dense="true">
                     <RowTemplate>
                         <MudTd DataLabel="Name">
@@ -63,7 +63,7 @@
     <MudGrid>
         <MudItem xs="6">
             <MudPaper>
-                <MudText Typo="Typo.h5">Entered drivers</MudText>
+                <MudText Typo="Typo.h5">Entered</MudText>
                 <MudTable T="Driver" Items="@Model.BaseDrivers" OnRowClick="RemoveDriver" Hover="true" Dense="true">
                     <RowTemplate>
                         <MudTd DataLabel="Name">
@@ -76,7 +76,7 @@
         </MudItem>
         <MudItem xs="6">
             <MudPaper>
-                <MudText Typo="Typo.h5">Available drivers</MudText>
+                <MudText Typo="Typo.h5">Available</MudText>
                 <MudTable T="Driver" Items="@Drivers" OnRowClick="EnterDriver" Hover="true" Dense="true">
                     <RowTemplate>
                         <MudTd DataLabel="Name">
