--- a/SimTECH/SimTECH/Pages/Factors/Manufacturers.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Manufacturers.razor
@@ -9,7 +9,7 @@
         <MudText Typo="Typo.h4">Tyre manufacturers</MudText>
         <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="AddManufacturer">New</MudButton>
     </MudPaper>
-    <MudTable Items="@ManufacturerNames" Bordered="true">
+    <MudTable Items="@ManufacturerData" Bordered="true">
         <HeaderContent>
             <MudTh>Name</MudTh>
             <MudTh>Pace</MudTh>
@@ -33,11 +33,11 @@
 </MudContainer>
 
 @code {
-    private List<Manufacturer> ManufacturerNames = new();
+    private List<Manufacturer> ManufacturerData = new();
 
     protected override async Task OnInitializedAsync()
     {
-        ManufacturerNames = await ManufacturerService.GetManufacturers();
+        ManufacturerData = await ManufacturerService.GetManufacturers();
     }
 
     async Task AddManufacturer() => await UpdateManufacturer(new Manufacturer());
@@ -51,13 +51,13 @@
         if (!result.Canceled && result.Data != null && result.Data is Manufacturer updatedItem)
         {
             await ManufacturerService.UpdateManufacturer(updatedItem);
-            ManufacturerNames = await ManufacturerService.GetManufacturers();
+            ManufacturerData = await ManufacturerService.GetManufacturers();
         }
     }
 
     async Task DeleteManufacturer(Manufacturer manufacturer)
     {
         await ManufacturerService.DeleteManufacturer(manufacturer);
-        ManufacturerNames.Remove(manufacturer);
+        ManufacturerData.Remove(manufacturer);
     }
 }
